--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "react-redux": "^8.1.3",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "name": "estate-mern",
   "version": "1.0.0",
